--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,6 +200,28 @@ body {
   width: 100%;
 }
 
+/* Pricing Plan Section CSS */
+
+.pricing-plans-card {
+  box-shadow: 0px 0.76px 7.59px 0px #13101040;
+  border-radius: 20px;
+  border: 0.76px solid #E7EBFF;
+  transition: 0.4s;
+}
+
+.color-white {
+  color: #797878;
+}
+
+.pricing-plans-card:hover {
+  background-color: #00A0FA;
+  border: 0.76px solid #E7EBFF;
+}
+
+.pricing-plans-card:hover *{
+  color: #fff;
+}
+
 /* Newsletter Section CSS */
 
 .newsletter-bg {
