--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,9 +218,19 @@ body {
   border: 0.76px solid #E7EBFF;
 }
 
-.pricing-plans-card:hover *{
+.pricing-plans-card:hover * {
   color: #fff;
 }
+
+.business-plans-card {
+  background-image: url('/assets/images/business-plan-bg.svg');
+  height: max-content;
+  box-shadow: 0px 0.76px 7.59px 0px #13101040;
+  border-radius: 20px;
+  border: 0.76px solid #E7EBFF;
+}
+
+
 
 /* Newsletter Section CSS */
 
